--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radia 3dgs Viewer</title>
+    <meta name="theme-color" content="#1a1a1a" />
+    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="%BASE_URL%radiaIcon_512.png" />
+    <title>Radia viewer</title>
     <!-- Critical inline background to prevent white flash before stylesheet loads -->
     <style>
       html, body {
